# nagperfdiag

./: AUTHORS  BUGS  ChangeLog  ChangeLog.0.1  ChangeLog.pnp  Makefile.in  README  README.npcd  README.pnpsender  THANKS  THANKS.pnp  configure  configure.ac
include/: config.h.in  global.h  pnp.h
man/: Makefile.in
man/man1/: pnpsender.1
sample-config/: Makefile.in  xinetd.pnp.sample.in
sample-config/nagperfdiag/: config.php.in  npcd.cfg-sample.in  process_perfdata.cfg-sample.in  rra.cfg-sample
sample-config/nagperfdiag/check_commands/: check_nwstat.cfg-sample
sample-config/nagperfdiag/pages/: web_traffic.cfg-sample  web_traffic_regexp.cfg-sample
scripts/: Makefile.in  process_perfdata.pl.in  rc.npcd.in
share/: Makefile.in
share/nagperfdiag/: ajax.php.in  index.php.in  zoom.php.in
share/nagperfdiag/include/: base.php  debug.php  function.inc.php  site.php  style.css
share/nagperfdiag/js/: tip_balloon.js  wz_tooltip.js  zoom.js
share/nagperfdiag/lang/: lang_de.php  lang_en.php  lang_fr.php
share/nagperfdiag/templates.dist/: check-host-alive.php  check_disk.php  check_disk_1.php  check_hddtemp.php  check_iftraffic.php  check_load.php  check_messpc_temp.php  check_nt_cpu.php  check_nt_disk.php  check_nt_mem.php  check_ping.php  check_snmp_int-bits.php  check_swap.php  check_users.php  default.php  helper_functions.php  response.php
src/: Makefile.in  config.c  logging.c  npcd.c  pnpsender.c  utils.c
src/module/: modpnpsender.c
